# 1DHD-PINN

./: .gitmodules  README.md  main.py  pyproject.toml
PaperAnalysis/Day1/: Readme.md
test/: SNN.ipynb  SNN_using_JAX.ipynb
