[project]
name = "1dhd-pinn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "equinox>=0.13.2",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "jax>=0.8.1",
    "jaxlib>=0.8.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "optax>=0.2.6",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
